# spec-based-testing

./: conftest.py  module.py  parser.py  pyproject.toml  test_module.py
example/: module.py
example/foo/: bar.py  baz.py  string.py
example/tests/: test_module.py
foo/: bar.py
spec_based_testing/: __init__.py  parser.py  plugin.py
